--- a/index.html
+++ b/index.html
@@ -80,45 +80,76 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
+      <amp-story-page id="pageProduct2">
+        <amp-story-grid-layer template="fill">
+        </amp-story-grid-layer>
+          <amp-story-grid-layer template="thirds">
+            <h1 grid-area="upper-third">Product Listing</h1>
+            <p grid-area="lower-third">
+                <pre>
+App (iOS, Android App & Web) 
+
+Sellers : Upload the pics for Products
+
+Product Listing : Searches & Filters   
+
+Product Page : Variety
+                Sizes 
+                 Feedbacks
+                   Ratings  
+
+Buyers : Shopkeeper Purchase
+            Check-out
+              Integration with Payment Gateway 
+                Feedback
+                 Likes 
+                </pre>
+            </p>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+
       <!-- Page 1 (Cat): 1 layer (vertical) -->
       <amp-story-page id="page1">
         <amp-story-grid-layer template="vertical">
-          <h1>Cats</h1>
-          <amp-img src="assets/cat.jpg"
+          <h1>Tech Stack</h1>
+          <amp-img src="assets/1.png"
               width="720" height="1280"
               layout="responsive">
           </amp-img>
-          <q>Dogs come when they're called. Cats take a message and get back to you. --Mary Bly</q>
+          <q>We'll be specifically using Google Apps and Technologies.</q>
         </amp-story-grid-layer>
       </amp-story-page>
+
 
       <!-- Page 2 (Dog): 2 layers (fill + thirds) -->
       <amp-story-page id="page2">
         <amp-story-grid-layer template="fill">
-          <amp-img src="assets/dog.jpg" 
+          <amp-img src="assets/2.jpg" 
               width="720" height="1280"
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
           <amp-story-grid-layer template="thirds">
-            <h1 grid-area="upper-third">Dogs</h1>
-            <p grid-area="lower-third">Dogs were probably the first tame animals. They have accompanied humans for some 10,000 years. Some scientists assert that all dogs, domestic and wild, share a common ancestor in the small South Asian wolf.</p>
+            <h1 grid-area="upper-third">Frontend</h1>
+            <p grid-area="lower-third">Google Flutter based App (iOS, Android & Web)</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
       <!-- Page 3 (Bird): 3 layers (fill + vertical + vertical) + Audio-->
       <amp-story-page id="page3" background-audio="assets/bird-singing.mp3">
         <amp-story-grid-layer template="fill">
-          <amp-img src="assets/bird.jpg"
+          <amp-img src="assets/3.jpg"
               width="720" height="1280"
               layout="responsive">
           </amp-img>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical">
-          <h1>Birds</h1>
+          <h1>Backend</h1>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical" class="bottom">
-          <q>A bird is three things: Feathers, flight and song, And feathers are the least of these. -Marjorie Allen Seiffert</q>
+          <q>Google Cloud Engine / App Engines Flex (Java based REST API)</q>
+          <q>GCS (Google Cloud Storage) & Google Cloud SQL</q>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -127,16 +158,16 @@
         <amp-story-grid-layer template="fill">
           <amp-video autoplay loop
                 width="720" height="1280"
-                poster="assets/rabbit.jpg"
+                poster="assets/4.jpg"
                 layout="responsive">
               <source src="assets/rabbit.mp4" type="video/mp4">
           </amp-video>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical">
-          <h1>Rabbits</h1>
+          <h1>Product Analytics</h1>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical" class="bottom">
-          <p>Rabbits can learn to follow simple voice commands and come when called by name, and are curious and playful.</p>
+          <p>Google Big Query & ML API (Auto ML / Vision / Translate / Natural Language / Text-to-Speech & Speech-To-Text API)</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -144,25 +175,25 @@
       <amp-story-page id="page5">
         <amp-story-grid-layer template="vertical" class="noedge">
           <div class="wrapper">
-            <amp-img src="assets/cat.jpg"
+            <amp-img src="assets/1.png"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay="0.4s">
             </amp-img>
-            <amp-img src="assets/dog.jpg"
+            <amp-img src="assets/2.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay="0.6s">
             </amp-img>
-            <amp-img src="assets/bird.jpg"
+            <amp-img src="assets/3.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
                 animate-in-delay=".8s">
             </amp-img>
-            <amp-img src="assets/rabbit.jpg"
+            <amp-img src="assets/4.jpg"
                 width="720" height="1280"
                 layout="responsive"
                 animate-in="fade-in"
@@ -171,7 +202,33 @@
           </div>
         </amp-story-grid-layer>
         <amp-story-grid-layer template="vertical" class="center-text">
-          <p class="banner-text" animate-in="whoosh-in-right">Pets can lower your stress levels!</p>
+          <p class="banner-text" animate-in="whoosh-in-right">Marketting can increase your chances of getting a customer.</p>
+          <p>Youtube - Facebook - Google Ads - Twitter</p>
+        </amp-story-grid-layer>
+      </amp-story-page>
+      <amp-story-page id="page6">
+        <amp-story-grid-layer template="vertical">
+          <h1>How will you pay?</h1>
+          <amp-img src="assets/GooglePay.jpg"
+              width="720" height="1280"
+              layout="responsive">
+          </amp-img>
+          <q>Google Pay Wallets</q>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="pageLast">
+        <amp-story-grid-layer template="vertical" class="noedge">
+            <amp-img src="assets/empowered-women-yourtsory.jpg"
+                width="400" height="1280"
+                layout="responsive"
+                animate-in="fade-in"
+                animate-in-delay="1s">
+            </amp-img>
+          </div>
+        </amp-story-grid-layer>
+        <amp-story-grid-layer template="vertical" class="center-text">
+          <p class="banner-text" animate-in="whoosh-in-right">Thank You!</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
