--- a/index.html
+++ b/index.html
@@ -80,13 +80,44 @@
         </amp-story-grid-layer>
       </amp-story-page>
 
+
       <amp-story-page id="pageProduct2">
-        <amp-story-grid-layer template="fill">
-        </amp-story-grid-layer>
+            <amp-img src="assets/bg.jpg"
+                width="720" height="1280"
+                layout="responsive">
+            </amp-img>
           <amp-story-grid-layer template="thirds">
-            <h1 grid-area="upper-third">Product Listing</h1>
+            <h1 grid-area="upper-third" style="color:black">Support Action Plan</h1>
             <p grid-area="lower-third">
-                <pre>
+                <pre style="color:black">
+Google Internet Sathi Programme for 
+Empowering Women in 100,000 villages 
+for online presence Education & 
+
+Marketing : Stories (day in their life)
+            Pictures
+            Social Media App 
+            Friendly Marketplace 
+            Financial Aids
+            Crowdsourcing
+            Startup India
+
+Community : Self Help Groups 
+        for sustainable model
+                </pre>
+            </p>
+        </amp-story-grid-layer>
+      </amp-story-page>
+
+      <amp-story-page id="pageProduct3">
+        <amp-img src="assets/bg.jpg"
+        width="720" height="1280"
+        layout="responsive">
+    </amp-img>
+          <amp-story-grid-layer template="thirds">
+            <h1 grid-area="upper-third" style="color:black">Product Listing</h1>
+            <p grid-area="lower-third">
+                <pre style="color:black">
 App (iOS, Android App & Web) 
 
 Sellers : Upload the pics for Products
@@ -99,8 +130,8 @@ Product Page : Variety
                    Ratings  
 
 Buyers : Shopkeeper Purchase
-            Check-out
-              Integration with Payment Gateway 
+          Check-out
+              Int. with Payment Gateway 
                 Feedback
                  Likes 
                 </pre>
