--- a/index.html
+++ b/index.html
@@ -89,12 +89,14 @@
           <amp-story-grid-layer template="thirds">
             <h1 grid-area="upper-third" style="color:black">Support Action Plan</h1>
             <p grid-area="lower-third">
-                <pre style="color:black">
-Google Internet Sathi Programme for 
-Empowering Women in 100,000 villages 
-for online presence Education & 
+                <pre style="color:black ; font-weight: bold;">
+Google Internet Sathi Programme 
+for Empowering Women in 
+100,000 villages for 
+online presence Education 
 
-Marketing : Stories (day in their life)
+Marketing : Stories 
+            (day in their life)
             Pictures
             Social Media App 
             Friendly Marketplace 
@@ -117,23 +119,25 @@ Community : Self Help Groups
           <amp-story-grid-layer template="thirds">
             <h1 grid-area="upper-third" style="color:black">Product Listing</h1>
             <p grid-area="lower-third">
-                <pre style="color:black">
+                <pre style="color:black; font-weight: bold;">
 App (iOS, Android App & Web) 
 
-Sellers : Upload the pics for Products
+Sellers : Upload the pics for 
+          Products
 
-Product Listing : Searches & Filters   
+Product Listing : Searches 
+                  Filters   
 
 Product Page : Variety
-                Sizes 
-                 Feedbacks
-                   Ratings  
+               Sizes 
+               Feedbacks
+               Ratings  
 
 Buyers : Shopkeeper Purchase
-          Check-out
-              Int. with Payment Gateway 
-                Feedback
-                 Likes 
+         Check-out
+         Int. with Payment Gateway 
+         Feedback
+         Likes 
                 </pre>
             </p>
         </amp-story-grid-layer>
