--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 layout="responsive">
             </amp-img>
           <amp-story-grid-layer template="thirds">
-            <h1 grid-area="upper-third" style="color:black">Support Action Plan</h1>
+            <h1 grid-area="upper-third" style="color:black">Action Plan</h1>
             <p grid-area="lower-third">
                 <pre style="color:black ; font-weight: bold;">
 Google Internet Sathi Programme 
@@ -99,8 +99,8 @@ Marketing : Stories
             (day in their life)
             Pictures
             Social Media App 
-            Friendly Marketplace 
-            Financial Aids
+Friendly Marketplace 
+Financial Aids:
             Crowdsourcing
             Startup India
 
