--- a/index.html
+++ b/index.html
@@ -82,14 +82,14 @@
 
 
       <amp-story-page id="pageProduct2">
-            <amp-img src="assets/bg.jpg"
+            <amp-img src="assets/Handcrafted-leather-300x450.jpg"
                 width="720" height="1280"
                 layout="responsive">
             </amp-img>
           <amp-story-grid-layer template="thirds">
-            <h1 grid-area="upper-third" style="color:black">Action Plan</h1>
+            <h1 grid-area="upper-third" style="color:white">Action Plan</h1>
             <p grid-area="lower-third">
-                <pre style="color:black ; font-weight: bold;">
+                <pre style="color:white ; font-weight: bold;">
 Google Internet Sathi Programme 
 for Empowering Women in 
 100,000 villages for 
@@ -112,14 +112,14 @@ Community : Self Help Groups
       </amp-story-page>
 
       <amp-story-page id="pageProduct3">
-        <amp-img src="assets/bg.jpg"
+        <amp-img src="assets/Handcrafted-leather-300x450.jpg"
         width="720" height="1280"
         layout="responsive">
     </amp-img>
           <amp-story-grid-layer template="thirds">
-            <h1 grid-area="upper-third" style="color:black">Product Listing</h1>
+            <h1 grid-area="upper-third" style="color:white">Product Listing</h1>
             <p grid-area="lower-third">
-                <pre style="color:black; font-weight: bold;">
+                <pre style="color:white; font-weight: bold;">
 App (iOS, Android App & Web) 
 
 Sellers : Upload the pics for 
