--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ Buyers : Shopkeeper Purchase
               width="720" height="1280"
               layout="responsive">
           </amp-img>
-          <q>We'll be specifically using Google Apps and Technologies.</q>
+          <q style="font-weight: bold">We'll be specifically using Google Apps and Technologies.</q>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -167,7 +167,7 @@ Buyers : Shopkeeper Purchase
         </amp-story-grid-layer>
           <amp-story-grid-layer template="thirds">
             <h1 grid-area="upper-third">Frontend</h1>
-            <p grid-area="lower-third">Google Flutter based App (iOS, Android & Web)</p>
+            <p grid-area="lower-third" style="color:black ; font-weight: bold" >Google Flutter based App (iOS, Android & Web)</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -182,9 +182,9 @@ Buyers : Shopkeeper Purchase
         <amp-story-grid-layer template="vertical">
           <h1>Backend</h1>
         </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-          <q>Google Cloud Engine / App Engines Flex (Java based REST API)</q>
-          <q>GCS (Google Cloud Storage) & Google Cloud SQL</q>
+        <amp-story-grid-layer template="vertical" class="bottom" ">
+          <p style="color:black ; font-weight: bold;">Google Cloud Engine / App Engines Flex (Java based REST API)</p>
+          <p style="color:black ; font-weight: bold;">GCS (Google Cloud Storage) & Google Cloud SQL</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
@@ -201,8 +201,8 @@ Buyers : Shopkeeper Purchase
         <amp-story-grid-layer template="vertical">
           <h1>Product Analytics</h1>
         </amp-story-grid-layer>
-        <amp-story-grid-layer template="vertical" class="bottom">
-          <p>Google Big Query & ML API (Auto ML / Vision / Translate / Natural Language / Text-to-Speech & Speech-To-Text API)</p>
+        <amp-story-grid-layer template="vertical" class="bottom" style="color:black ; font-weight: bold">
+          <p style="color:black ; font-weight: bold;">Google Big Query & ML API (Auto ML / Vision / Translate / Natural Language / Text-to-Speech & Speech-To-Text API)</p>
         </amp-story-grid-layer>
       </amp-story-page>
 
